         You can set a popup prototype display value that
         is used to determine with popup widths.
         
    o Narrow buttons can be disabled in the system properties.
    o Added a JPopupMenu client property for no-margin borders,
      see Options#NO_MARGIN_KEY. This is useful if a JPopupMenu 
      contains a single component, for example a JScrollPane.


DISTRIBUTION CHANGES

    o Merged the source folders 'src/common', 'src/plastic'
      and 'src/windows' to 'src/core'.
    o The sources no longer ship as a source Zip archive.
      They now come in the directory structure used by the CVS. 
      This makes it easier to build the distribution using ANT.     
      If you want to attach the library sources in an IDE, 
      point to folder 'src/core'.
    
    
OTHER CHANGES

    o The Windows and Plastic L&fs have been tweaked for Windows Vista.
    o Overhauled the Windows combobox layout and rendering.
    o Overhauled the Plastic combobox layout and rendering.
    o Improved appearance of the Looks demo tabs on Windows.
    o The demo's DemoFrame class accepts a parameter for the L&f: 
      "Windows", "Plastic", "Plastic3D", "PlasticXP",
      or a full class name like:
      "com.sun.java.swing.plaf.windows.WindowsLookAndFeel",
      "javax.swing.plaf.metal.MetalLookAndFeel".
    
    
---------------------------------------------------------------------------

Find below the change history for older releases.



                    JGoodies Looks, Version 1.3.2 
                            Release Notes
                        

INTRODUCTION

    This update fixes a couple of bugs, most noticably in the drop shadow 
    feature. Also the source code style has been slightly improved.


BUGS FIXED

    #43: ShadowPopupFactory doesn't respect the lightweight property.
    #45: NPE in ShadowPopup.hide().
    #47: JavaCup.gif reported missing in Windows L&f.
    #50: ToolBarUI doesn't take the orientation into account.